Refactor to remove methods created post JDK 1.8